[package]
name = "blue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.10"
clap = { version = "4.5.39", features = ["derive"] }
crop = { version = "0.4.3", features = ["graphemes"] }
crossterm = "0.29.0"
pathdiff = { version = "0.2.3", features = ["camino"] }
ratatui = "0.29.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[lints]
clippy.pedantic = { level = "warn", priority = -1 }

[profile.profile]
inherits = "release"
debug = "full"
